change site link

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/susanna-chen/chinese-website.git",
+  "homepage": "https://susanna-chen.github.io/chinese-website/",
   "name": "chinese-website",
   "version": "0.1.0",
   "private": true,
