--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://susanna-chen.github.io/chinese-website/",
+  "homepage": "http://34.121.25.177",
   "name": "chinese-website",
   "version": "0.1.0",
   "private": true,
